--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "74478a1f",
+   "id": "45cc186f",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "69184930",
+   "id": "5ef47321",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e463c1b5",
+   "id": "9a7536e4",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "56c6fdf9",
+   "id": "14585830",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d65dea",
+   "id": "b992525f",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f18f3478",
+   "id": "5b423274",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d41f15e8",
+   "id": "57c80206",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e81edc47",
+   "id": "c3d243c8",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e6a9b38b",
+   "id": "dd59e5e9",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0c69c2f",
+   "id": "b94759af",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a366c9ad",
+   "id": "5055e9e4",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a0d069fc",
+   "id": "171b6a87",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "6cb89027",
+   "id": "49a16de5",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "77e98292",
+   "id": "1a71757d",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "37ac81b4",
+   "id": "847be180",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "403446b6",
+   "id": "09907302",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1b4ef18f",
+   "id": "c618248a",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "5a2be837",
+   "id": "69f89579",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "28069311",
+   "id": "09d8001b",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "5f9fac3c",
+   "id": "226ce599",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "22919047",
+   "id": "45050876",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "d8cb62a3",
+   "id": "9aea747d",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "fa95241d",
+   "id": "3be57df6",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "2e7650fa",
+   "id": "b04b263f",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "32f6f0ee",
+   "id": "590bd37e",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aef4b32e",
+   "id": "0eb7339e",
    "metadata": {},
    "source": [
     "## Slicing of 3D array"
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "328b0e16",
+   "id": "e7159528",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e2efcb38",
+   "id": "81c38397",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "a578db83",
+   "id": "2aebb58d",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "00db69b6",
+   "id": "b721ac7f",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0603393c",
+   "id": "08e91e90",
    "metadata": {},
    "source": [
     "# Data types in Numpy"
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a6c88b1",
+   "id": "5d80e718",
    "metadata": {},
    "source": [
     "# list of all data types in numpy"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "801fa4c6",
+   "id": "dcc5653e",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "649c25b3",
+   "id": "bf6f6b00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "d863ab1f",
+   "id": "6a47568b",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f7368647",
+   "id": "f5b35c22",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "63e1960c",
+   "id": "09c9d1bb",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "662b0ebb",
+   "id": "ce52fc6e",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "949a87ba",
+   "id": "84fd67f6",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "e7ebf696",
+   "id": "9042b956",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "df2b7de3",
+   "id": "5c3af734",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "af512620",
+   "id": "d229d8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028b4554",
+   "id": "1df9f0e0",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "eace06b6",
+   "id": "eed06655",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99367fad",
+   "id": "d6ca0d20",
    "metadata": {},
    "source": [
     "## Data Type Conversion"
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "221ad3d1",
+   "id": "be60fbea",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4dbcfe47",
+   "id": "8656b947",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb145231",
+   "id": "e9c9cb06",
    "metadata": {},
    "source": [
     "## Differance between copy and view"
@@ -1546,22 +1546,89 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e52b218b",
+   "id": "bba3c716",
    "metadata": {},
    "source": [
     "## Copy :\n",
-    "\n",
-    "\n",
     "#### A copy is a new array that has the same data as the original array.changes made to the copy do not affect the original array, and vice versa\n",
     "\n",
     "\n",
-    "#### View :\n"
+    "## View :\n",
+    "#### A view is a new array that refers to the same data as the orinal array. changes made to the view affect the original array , and vice versa\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "54a55ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array: [1 2 3 4 5]\n",
+      "copid array: [1 2 3 4 5]\n",
+      "now we will update the original array \"1 to 100\"\n",
+      "original array after update : [100   2   3   4   5]\n",
+      "copied array after update in original: [1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5])\n",
+    "print('original array:',a)\n",
+    "b=a.copy()\n",
+    "print('copid array:',b)\n",
+    "print('now we will update the original array \"1 to 100\"')\n",
+    "a[0]=100\n",
+    "print('original array after update :',a)\n",
+    "print('copied array after update in original:',b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "8b9b0a50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array: [1 2 3 4 5]\n",
+      "copied array : [1 2 3 4 5]\n",
+      "now we will update the original array \"1 to 100\"\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'builtin_function_or_method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [107], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnow we will update the original array \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1 to 100\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43moriginal array after update :\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43ma\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcopied array after update in original :\u001b[39m\u001b[38;5;124m'\u001b[39m,b]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "a=np.array([1,2,3,4,5])\n",
+    "print('original array:',a)\n",
+    "b=a .view()\n",
+    "print('copied array :',a)\n",
+    "print('now we will update the original array \"1 to 100\"')\n",
+    "a[0]=100\n",
+    "\n",
+    "print['original array after update :',a]\n",
+    "print['copied array after update in original :',b]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1ade91",
+   "id": "5b0fc884",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1569,23 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "287267cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b06269b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec33f804",
+   "id": "fd0a67ca",
    "metadata": {},
    "outputs": [],
    "source": []
