--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "45cc186f",
+   "id": "2059d6e7",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5ef47321",
+   "id": "1084a609",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9a7536e4",
+   "id": "8913f5e4",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "14585830",
+   "id": "cbc8fad4",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b992525f",
+   "id": "94a2780e",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5b423274",
+   "id": "4e06e1e4",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "57c80206",
+   "id": "c4deee13",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c3d243c8",
+   "id": "daacc008",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "dd59e5e9",
+   "id": "6d08dbe8",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b94759af",
+   "id": "66701225",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5055e9e4",
+   "id": "9035e2ec",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "171b6a87",
+   "id": "0922d33a",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "49a16de5",
+   "id": "0e7656d4",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1a71757d",
+   "id": "5334bd5c",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "847be180",
+   "id": "e0a39416",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09907302",
+   "id": "3b9a9dc3",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "c618248a",
+   "id": "778ba7d1",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "69f89579",
+   "id": "7ef02828",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "09d8001b",
+   "id": "d78416a6",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "226ce599",
+   "id": "69bbc1b7",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "45050876",
+   "id": "5a92936d",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "9aea747d",
+   "id": "4f0af0e7",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "3be57df6",
+   "id": "13fed0e1",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b04b263f",
+   "id": "019e018f",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "590bd37e",
+   "id": "280e5ffa",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb7339e",
+   "id": "c4dcbb55",
    "metadata": {},
    "source": [
     "## Slicing of 3D array"
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "e7159528",
+   "id": "f95babb4",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "81c38397",
+   "id": "0d9048e6",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "2aebb58d",
+   "id": "94335fb8",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b721ac7f",
+   "id": "a9bd130c",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e91e90",
+   "id": "fdc7a132",
    "metadata": {},
    "source": [
     "# Data types in Numpy"
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d80e718",
+   "id": "e0cbe1fd",
    "metadata": {},
    "source": [
     "# list of all data types in numpy"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "dcc5653e",
+   "id": "2053a4e4",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "bf6f6b00",
+   "id": "90b5d2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6a47568b",
+   "id": "96dca6a1",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f5b35c22",
+   "id": "22b56e11",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "09c9d1bb",
+   "id": "df08c7f6",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "ce52fc6e",
+   "id": "64358b8b",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "84fd67f6",
+   "id": "56f440a3",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "9042b956",
+   "id": "ba73b4b1",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "5c3af734",
+   "id": "bccc627b",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d229d8ae",
+   "id": "4066a599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df9f0e0",
+   "id": "253217de",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "eed06655",
+   "id": "4aeaae0c",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ca0d20",
+   "id": "69bbdffc",
    "metadata": {},
    "source": [
     "## Data Type Conversion"
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "be60fbea",
+   "id": "8f407091",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "8656b947",
+   "id": "987bbf58",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c9cb06",
+   "id": "9ed6f010",
    "metadata": {},
    "source": [
     "## Differance between copy and view"
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba3c716",
+   "id": "bc5888e5",
    "metadata": {},
    "source": [
     "## Copy :\n",
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "54a55ac2",
+   "id": "1c98c601",
    "metadata": {},
    "outputs": [
     {
@@ -1588,8 +1588,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "8b9b0a50",
+   "execution_count": 109,
+   "id": "b46f9884",
    "metadata": {},
    "outputs": [
     {
@@ -1598,18 +1598,9 @@
      "text": [
       "original array: [1 2 3 4 5]\n",
       "copied array : [1 2 3 4 5]\n",
-      "now we will update the original array \"1 to 100\"\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'builtin_function_or_method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [107], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnow we will update the original array \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1 to 100\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43moriginal array after update :\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43ma\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcopied array after update in original :\u001b[39m\u001b[38;5;124m'\u001b[39m,b]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+      "now we will update the original array \"1 to 100\"\n",
+      "original array after update : [100   2   3   4   5]\n",
+      "copied array after update in original : [100   2   3   4   5]\n"
      ]
     }
    ],
@@ -1621,14 +1612,135 @@
     "print('now we will update the original array \"1 to 100\"')\n",
     "a[0]=100\n",
     "\n",
-    "print['original array after update :',a]\n",
-    "print['copied array after update in original :',b]\n"
+    "print('original array after update :',a)\n",
+    "print('copied array after update in original :',b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "3b6b4c80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42  2  3  4  5]\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# copy : it is going to creat new instance fpr ypur value\n",
+    "\n",
+    "arr = np .array([1,2,3,4,5])\n",
+    "x = arr.copy()# separat object required \n",
+    "arr[0]= 42 # updated arr 0 th index\n",
+    "\n",
+    "print (arr )\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "8eeb4784",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[100   2   3   4   5   6]\n",
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array ([1,2,3,4,5,6])\n",
+    "x = arr.copy()# separat object required\n",
+    "print(x)\n",
+    "x[0] = 100\n",
+    "print(x)\n",
+    "\n",
+    "print(arr)\n",
+    "#print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "8b692126",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[200   2   3   4   5]\n",
+      "[200   2   3   4   5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# view \n",
+    "\n",
+    "arr = np.array([1,2,3,4,5])\n",
+    "x = arr.view ()\n",
+    "\n",
+    "#x = arr \n",
+    "x[0] = 200\n",
+    "print(x)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "a78eb155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 2 3]\n",
+      "[4 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array ([1,2,3])\n",
+    "b = a.view()\n",
+    "b[0]=4\n",
+    "\n",
+    "\n",
+    "print(a)# output : [4,2,3]\n",
+    "print(b)# output: [4,2,3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6251d3a8",
+   "metadata": {},
+   "source": [
+    "### Base concept : how to identify copy or  view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7169e737",
+   "metadata": {},
+   "source": [
+    "#### "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0fc884",
+   "id": "56579907",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1636,7 +1748,103 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd0a67ca",
+   "id": "07cab3ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49cb3e42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f9e84c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faad964f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3dd4fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f50abc95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2da43a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5defebf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e652be7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87eb417d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e828cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a308d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6de730a0",
    "metadata": {},
    "outputs": [],
    "source": []
