--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2059d6e7",
+   "id": "35995fd6",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1084a609",
+   "id": "3487c39b",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8913f5e4",
+   "id": "e87770a9",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "cbc8fad4",
+   "id": "afa550ed",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a2780e",
+   "id": "e011ef39",
    "metadata": {},
    "source": [
     "## Array Slicing"
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "4e06e1e4",
+   "id": "29c0cedd",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c4deee13",
+   "id": "17366505",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "daacc008",
+   "id": "58cf7b19",
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6d08dbe8",
+   "id": "92c3fef2",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66701225",
+   "id": "8bc06eb8",
    "metadata": {},
    "source": [
     "## Negative indices"
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9035e2ec",
+   "id": "d4e2934c",
    "metadata": {},
    "source": [
     "####  Negative indices always start from last element of n-d \n",
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0922d33a",
+   "id": "852513fb",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0e7656d4",
+   "id": "19cabef8",
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5334bd5c",
+   "id": "5afc7a29",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e0a39416",
+   "id": "e7f779d4",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b9a9dc3",
+   "id": "b569f308",
    "metadata": {},
    "source": [
     "### Slincing of 2D Array"
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "778ba7d1",
+   "id": "3b86a19f",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7ef02828",
+   "id": "82d0d6a0",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "d78416a6",
+   "id": "a6497da3",
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "69bbc1b7",
+   "id": "00698deb",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5a92936d",
+   "id": "1007dc69",
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "4f0af0e7",
+   "id": "5f74b5a7",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "13fed0e1",
+   "id": "698a376a",
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "019e018f",
+   "id": "5d876d6a",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "280e5ffa",
+   "id": "09ee20e3",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4dcbb55",
+   "id": "fcc50db4",
    "metadata": {},
    "source": [
     "## Slicing of 3D array"
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "f95babb4",
+   "id": "9fc7769a",
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "0d9048e6",
+   "id": "254a3ba7",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "94335fb8",
+   "id": "874ebcce",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "a9bd130c",
+   "id": "f7cba251",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc7a132",
+   "id": "6ce4b908",
    "metadata": {},
    "source": [
     "# Data types in Numpy"
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0cbe1fd",
+   "id": "691b4dfd",
    "metadata": {},
    "source": [
     "# list of all data types in numpy"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "2053a4e4",
+   "id": "ff8cb275",
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "90b5d2c3",
+   "id": "6ba90fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "96dca6a1",
+   "id": "2e73a239",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "22b56e11",
+   "id": "a806befb",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "df08c7f6",
+   "id": "343de1c7",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "64358b8b",
+   "id": "3ddc37a6",
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "56f440a3",
+   "id": "90050c09",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ba73b4b1",
+   "id": "ca0a8b92",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "bccc627b",
+   "id": "25b0d0cb",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "4066a599",
+   "id": "c044736c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,14 +1446,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253217de",
+   "id": "993f909c",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "4aeaae0c",
+   "id": "d9aa0faa",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69bbdffc",
+   "id": "af2319e1",
    "metadata": {},
    "source": [
     "## Data Type Conversion"
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8f407091",
+   "id": "567c6293",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "987bbf58",
+   "id": "7a4b43ed",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed6f010",
+   "id": "7e3864bd",
    "metadata": {},
    "source": [
     "## Differance between copy and view"
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc5888e5",
+   "id": "f5aeec22",
    "metadata": {},
    "source": [
     "## Copy :\n",
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "1c98c601",
+   "id": "f1bfb4cd",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "b46f9884",
+   "id": "7ad725c8",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "3b6b4c80",
+   "id": "fb4bf4cf",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "8eeb4784",
+   "id": "00cc606f",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "8b692126",
+   "id": "1fa363d9",
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "a78eb155",
+   "id": "77a2c247",
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6251d3a8",
+   "id": "30bd28ee",
    "metadata": {},
    "source": [
     "### Base concept : how to identify copy or  view"
@@ -1731,16 +1731,239 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7169e737",
+   "id": "c7286bfd",
    "metadata": {},
    "source": [
-    "#### "
+    "#### That will possible  by using \"base\" fuction\n",
+    "if you are referring to identifying whether a numpy array is a copy or a view (a differant view of the same data) , you can use the base attribute of the array.the base attribute returns none for arrays that own their data and it returns the base object forrrrrrr arrays that are views"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "5214e0e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np .array([1,2,3,4,5])\n",
+    "\n",
+    "x = arr.copy()\n",
+    "y = arr .view()\n",
+    "\n",
+    "print(x.base )\n",
+    "print(y.base)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd053b30",
+   "metadata": {},
+   "source": [
+    "## Numpy Array Reshaping "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "942f5763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12,)\n",
+      "(12,)\n",
+      "\n",
+      "\n",
+      "[[ 1]\n",
+      " [ 2]\n",
+      " [ 3]\n",
+      " [ 4]\n",
+      " [ 5]\n",
+      " [ 6]\n",
+      " [ 7]\n",
+      " [ 8]\n",
+      " [ 9]\n",
+      " [10]\n",
+      " [11]\n",
+      " [12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array ([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "\n",
+    "print(arr.shape)\n",
+    "print(arr.shape)\n",
+    "print('\\n')\n",
+    "newarr=arr.reshape(12,1)\n",
+    "print(newarr)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "12f739e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "3766106e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "(12,)\n",
+      "\n",
+      "\n",
+      "[[[ 1  2]\n",
+      "  [ 3  4]]\n",
+      "\n",
+      " [[ 5  6]\n",
+      "  [ 7  8]]\n",
+      "\n",
+      " [[ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "\n",
+    "print(arr.size)\n",
+    "print(arr.shape)\n",
+    "print('\\n')\n",
+    "newarr=arr.reshape(3,2,2)\n",
+    "print(newarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "f42adb86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]]\n",
+      "\n",
+      " [[ 7  8  9]\n",
+      "  [10 11 12]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6,7,8,9,10,11,12])\n",
+    "newarr = arr.reshape(2,2,3)\n",
+    "print(newarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "59ad9de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 44 77 88 99 55]]\n",
+      "2\n",
+      "****************************************************************************************************\n",
+      "[11 44 77 88 99 55]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creat a 2D array and then covert it into 1D array\n",
+    "\n",
+    "arr = np.array([[11,44,77,88,99,55]])\n",
+    "newarr=arr.reshape(6,)\n",
+    "print(arr)\n",
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "7b49d19f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 44 77]\n",
+      " [88 99 55]]\n",
+      "2\n",
+      "****************************************************************************************************\n",
+      "[11 44 77 88 99 55]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[11,44,77],[88,99,55]])\n",
+    "newarr = arr.reshape(6,)\n",
+    "print(arr)\n",
+    "print(arr.ndim)\n",
+    "print('*'*100)\n",
+    "print(newarr)\n",
+    "print(newarr.ndim)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56579907",
+   "id": "e34513a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([11,44,77,88,99,55])\n",
+    "newarr = arr.reshape(3,2)\n",
+    "print(arr)\n",
+    "print(arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d47fc15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1748,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07cab3ae",
+   "id": "ede48f92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1756,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49cb3e42",
+   "id": "acab5b5a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1764,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f9e84c",
+   "id": "4c982a99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1772,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faad964f",
+   "id": "053dbfaf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1780,71 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3dd4fe8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f50abc95",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2da43a8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5defebf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e652be7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87eb417d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8e828cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3a308d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6de730a0",
+   "id": "22753124",
    "metadata": {},
    "outputs": [],
    "source": []
