--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d14055cc",
+   "id": "cd9fa054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2111,7 +2111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e89bd6",
+   "id": "3f14eeb1",
    "metadata": {},
    "source": [
     "## Numpy Array Reshape Flatten Unknown Dimention"
@@ -2119,7 +2119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d291efd",
+   "id": "e1011af7",
    "metadata": {},
    "source": [
     "#### if user dont know any one dimention out 3 dimention then numpy can obtain it for user have mention the _1 for thaat dim"
@@ -2127,8 +2127,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "7792cfd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1]\n",
+      "  [2]\n",
+      "  [3]]\n",
+      "\n",
+      " [[4]\n",
+      "  [5]\n",
+      "  [6]]\n",
+      "\n",
+      " [[7]\n",
+      "  [8]\n",
+      "  [9]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unkown Dimention \n",
+    "arr = np.array ([1,2,3,4,5,6,7,8,9])\n",
+    "\n",
+    "newarr = arr.reshape(3,3,-1)\n",
+    "print(newarr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8437c8e",
+   "metadata": {},
+   "source": [
+    "#### if u want to a 1-D  Araay using N-D array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "89028af1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 20 30]\n",
+      " [40 50 60]]\n",
+      "(2, 3)\n",
+      "[10 20 30 40 50 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# flattenting (reshshape/covrt in scalar vector) an array\n",
+    "\n",
+    "arr = np.array([[10,20,30],[40,50,60]])\n",
+    "\n",
+    "print(arr)\n",
+    "print(arr.shape)\n",
+    "\n",
+    "newarr=arr.reshape(-1)\n",
+    "print(newarr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d0a618f",
+   "metadata": {},
+   "source": [
+    "## Numpy Array Iterating"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8e03b286",
+   "id": "b23f6d6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iterating means that you going each element of the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "44462ba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20 30]\n",
+      "[40 50 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar = np.array ([1,2,3])\n",
+    "\n",
+    "for x in arr:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2fe51f7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2136,7 +2245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d355a19",
+   "id": "3064738d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2144,7 +2253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87a7f9ba",
+   "id": "4e012ed2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2152,7 +2261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b15a8c",
+   "id": "c3d8d47c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2160,7 +2269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c347239",
+   "id": "c555bbb6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2168,7 +2277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09ed03a",
+   "id": "2eb55cec",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2176,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2166e50a",
+   "id": "7bab34b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2184,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574be14b",
+   "id": "7e72fcc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2192,7 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75233ac",
+   "id": "4e05418e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2200,7 +2309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2753a3b0",
+   "id": "b4260f5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2208,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "729e53d0",
+   "id": "46275c89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2216,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2589a9e",
+   "id": "e0c79bcd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2224,7 +2333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d3cebaa",
+   "id": "d9ac6ab3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2232,7 +2341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648213db",
+   "id": "ca6226a1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2240,7 +2349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d377ba",
+   "id": "2ba1dcb5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2248,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a9603e",
+   "id": "7d41a18e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2256,55 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c054df56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae534524",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "857326ff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b304d97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "053b8047",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6da341d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78ea30fa",
+   "id": "4bfc24f7",
    "metadata": {},
    "outputs": [],
    "source": []
