--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "13d02f1a",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e4600045",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3b71ea59",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f546bcf7",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "2f6d1c45",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "ddb1f60a",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1432d359",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "e258bfe5",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "66d69e29",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "dc6458d2",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "a4e42afe",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "6b052a28",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "a0696532",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "2b691467",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "d4b95d9a",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "(array([[[[[1, 2, 3]]]]]), 5)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "6d15b433",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "(array([[[1, 2, 3]]]), 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "28604dfd",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "af918ce2",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "(2, 2, 3)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "ecd982d5",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        " 3)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "1df5ee32",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
        "6"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "348e8d60",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "(array([[[[[1, 2, 3, 4]]]]]), 5, (1, 1, 1, 1, 4))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "55aec0ed",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "e6513708",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "92db1714",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "id": "6e8805fc",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "id": "432a35f7",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "659c4bf7",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "15b2a48e",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "3164f297",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "f50553d1",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "edc273c7",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
        "       [8]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "4e23a399",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "id": "136bc9c8",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "id": "9510e7f8",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "id": "f0dbb181",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "id": "f66ca599",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "id": "36c4b24b",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "id": "3d92da26",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "id": "af406f5d",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1172,7 @@
        "array([6, 7])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "id": "af6647f3",
    "metadata": {},
    "outputs": [
@@ -1193,7 +1193,7 @@
        "array([55, 66])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 41,
    "id": "e58af1f8",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1214,7 @@
        "array([66, 77])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 42,
    "id": "72444517",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1250,7 @@
      "evalue": "invalid syntax (1226495924.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [88], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    unit - unsigned intger\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn [42], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    unit - unsigned intger\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 43,
    "id": "30448cb6",
    "metadata": {},
    "outputs": [],
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 44,
    "id": "dfcd0c73",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 45,
    "id": "26382e21",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 46,
    "id": "19d05281",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 47,
    "id": "5fa06d29",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 48,
    "id": "f24b37c3",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 49,
    "id": "400bfbf1",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 50,
    "id": "01d4c219",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 51,
    "id": "df64f816",
    "metadata": {},
    "outputs": [],
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 52,
    "id": "87370531",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 53,
    "id": "6dbef024",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 54,
    "id": "b1a82d75",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 55,
    "id": "25c5ae0d",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 56,
    "id": "ab9fefb7",
    "metadata": {},
    "outputs": [
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 57,
    "id": "d9d7400e",
    "metadata": {},
    "outputs": [
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 58,
    "id": "a98bc8dd",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 59,
    "id": "6ef951a5",
    "metadata": {},
    "outputs": [
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 60,
    "id": "632914df",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 61,
    "id": "a81b2ce5",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 62,
    "id": "ed4ad8a9",
    "metadata": {},
    "outputs": [
@@ -1813,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 63,
    "id": "efc75ce1",
    "metadata": {},
    "outputs": [
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 64,
    "id": "578a9f88",
    "metadata": {},
    "outputs": [
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 65,
    "id": "3b35df36",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 66,
    "id": "42723fe9",
    "metadata": {},
    "outputs": [
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 67,
    "id": "868a1243",
    "metadata": {},
    "outputs": [
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 68,
    "id": "730860f0",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 69,
    "id": "059e681c",
    "metadata": {},
    "outputs": [
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 70,
    "id": "e407b27f",
    "metadata": {
     "scrolled": true
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "id": "cd9fa054",
    "metadata": {},
    "outputs": [],
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "id": "46bf335e",
    "metadata": {},
    "outputs": [
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "id": "73798437",
    "metadata": {},
    "outputs": [
@@ -2127,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "id": "7792cfd7",
    "metadata": {},
    "outputs": [
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "89028af1",
    "metadata": {},
    "outputs": [
@@ -2203,18 +2203,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b23f6d6f",
+   "cell_type": "markdown",
+   "id": "da580941",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# iterating means that you going each element of the array"
+    "### iterating means that you going each element of the array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "id": "44462ba1",
    "metadata": {},
    "outputs": [
@@ -2222,25 +2220,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10 20 30]\n",
-      "[40 50 60]\n"
+      "[11 22 33]\n",
+      "[10 20 30]\n"
      ]
     }
    ],
    "source": [
-    "ar = np.array ([1,2,3])\n",
+    "# iterating on 2-D array \n",
+    "arr = np.array ([[11,22,33],[10,20,30]])\n",
     "\n",
-    "for x in arr:\n",
+    "# print(arr)\n",
+    "\n",
+    "for x in arr: # x is taking elements here\n",
     "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "a2fe51f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# interating on scalarelement of 2-D array\n",
+    "\n",
+    "arr = np.array([[1,2,3],[4,5,6]])\n",
+    "for x in arr : # here x is hplding list of element\n",
+    "    for i in x:\n",
+    "        print(i)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
