--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da580941",
+   "id": "17d574eb",
    "metadata": {},
    "source": [
     "### iterating means that you going each element of the array"
@@ -2270,7 +2270,11 @@
    "id": "3064738d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#iterating on scalar elememntof 3-D array\n",
+    "\n",
+    "arr = np.array([[[1,2,3,],[]]])"
+   ]
   },
   {
    "cell_type": "code",
