--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d574eb",
+   "id": "bcb218e7",
    "metadata": {},
    "source": [
     "### iterating means that you going each element of the array"
@@ -2266,31 +2266,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "3064738d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "\n",
+      "2 \n",
+      "\n",
+      "3 \n",
+      "\n",
+      "4 \n",
+      "\n",
+      "5 \n",
+      "\n",
+      "6 \n",
+      "\n",
+      "7 \n",
+      "\n",
+      "8 \n",
+      "\n",
+      "9 \n",
+      "\n",
+      "10 \n",
+      "\n",
+      "11 \n",
+      "\n",
+      "12 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#iterating on scalar elememntof 3-D array\n",
     "\n",
-    "arr = np.array([[[1,2,3,],[]]])"
+    "arr = np.array([[[1,2,3,],[4,5,6]],[[7,8,9],[10,11,12]]])\n",
+    "for x in arr : \n",
+    "#    print(x,'\\n')\n",
+    "    for i in x:\n",
+    "        for j in i :\n",
+    "            print(j,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df20ba4e",
+   "metadata": {},
+   "source": [
+    "### using nditer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e012ed2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "c3d8d47c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (621175081.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [86], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    arr =np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterating on 3-D array \n",
+    " arr =np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\n",
+    "    \n",
+    "y = np .nditer(arr)\n",
+    "\n",
+    " for x in y:\n",
+    "        print(x)"
+   ]
   },
   {
    "cell_type": "code",
