--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb218e7",
+   "id": "49af6bee",
    "metadata": {},
    "source": [
     "### iterating means that you going each element of the array"
@@ -2314,7 +2314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df20ba4e",
+   "id": "cab7c226",
    "metadata": {},
    "source": [
     "### using nditer()"
@@ -2322,52 +2322,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "id": "c3d8d47c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (621175081.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [86], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    arr =np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
      ]
     }
    ],
    "source": [
     "# iterating on 3-D array \n",
-    " arr =np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\n",
+    "arr =np.array([[[1,2],[3,4]],[[5,6],[7,8]]])\n",
     "    \n",
     "y = np .nditer(arr)\n",
     "\n",
-    " for x in y:\n",
+    "for x in y:\n",
     "        print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "c555bbb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<numpy.nditer object at 0x0000022DA520F230>\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "88\n",
+      "88\n",
+      "3939\n",
+      "999\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3,4],[88,88,3939,999]])\n",
+    "\n",
+    "print(np.nditer(arr))\n",
+    "for i in np.nditer(arr):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "2eb55cec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int to float 1.0\n",
+      "int to float 2.0\n",
+      "int to float 3.0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "b'1'\n",
+      "b'2'\n",
+      "b'3'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Casting array eleemt from one type other data type \n",
+    "\n",
+    "# numpy can not at the movement for that we need t0oo go with \n",
+    "\n",
+    "arr = np.array([1,2,3])\n",
+    "for x in np.nditer(ar,flags = ['buffered'],op_dtypes=['float']):\n",
+    "    print('int to float',x)\n",
+    "for x in np.nditer(arr,flags=['buffered'],op_dtypes=['U']):\n",
+    "    print(x)\n",
+    "for x in np.nditer(arr,flags=['buffered'],op_dtypes=['S']):\n",
+    "    print(x)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "7bab34b8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1+0j)\n",
+      "(2+0j)\n",
+      "(3+0j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in np.nditer(arr,flags = ['buffered'],op_dtypes=[\"complex\"]):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
